2006-09-08  Pavel Roskin  <proski@gnu.org>

	* netboot/etherboot.h: Remove incorrect extern declarations of
	the variables later declared static.  Move BOOTP_DATA_ADDR ...
	* netboot/main.c: ... here.  Eliminate end_of_rfc1533 - it's
	write-only.

2006-06-24  Yoshinori K. Okuji  <okuji@enbug.org>

	* docs/grub.texi: Changed the license term to the GNU Free
	Documentation License 1.2.

	* docs/multiboot.texi: Reformatted to show the license term
	and the version number explicitly.
	
	* docs/fdl.texi: New file.
	
	* docs/Makefile.am (grub_TEXINFOS): Added fdl.texi.

2006-06-24  Robert Millan  <robertmh@gnu.org>

	* lib/device.c (write_to_partition): /dev/ataraid/ and /dev/rd/
	partitions have a "p" prefix.  Add it.

2006-06-24  Robert Millan  <robertmh@gnu.org>

	* lib/device.c (get_i2o_disk_name): New function.
	(init_device_map) [__linux__]: Add support for I2O devices.

2006-05-02  Pavel Roskin  <proski@gnu.org>

	* stage2/stage2.c (run_menu): Fix "savedefault" to save only top
	level menu positions.  Remember current position when calling a
	submenu.  Don't recalculate it when booting from a submenu.

	* grub/main.c (main): Make sure the boot drive number doesn't
	exceed 255.

2006-05-02  Vesa Jaaskelainen  <chaac@nic.fi>

	* stage2/shared.h (vbe_mode): Back ported aligment fix from GRUB 2
	to GRUB Legacy.  Problem reported by Gerardo Richarte.

2006-04-23  Robert Millan  <robertmh@gnu.org>

	* grub/asmstub.c (get_diskinfo): Optimize sysctl routine.

2006-04-20  Robert Millan  <robertmh@gnu.org>

	Fixes for kernel of FreeBSD:
	* grub/asmstub.c (get_diskinfo): Toggle "kern.geom.debugflags" sysctl
	before opening a device for writing.
	* util/grub-install.in: Devices don't have this "r" prefix anymore.

2006-04-16  Yoshinori K. Okuji  <okuji@enbug.org>

	* docs/multiboot.texi: Correct the offset of address
	fields. Reported by Jeroen Dekkers.

2006-03-21  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/builtins.c (setup_func): Specify the size of DEVICE to